# gobboai

./: .editorconfig  .gitignore  Cargo.toml  DEVLOG.md  Gobby.md  README.md  TODO.md
.github/workflows/: ci.yml
crates/gobbo/: Cargo.toml
crates/gobbo-codex/: Cargo.toml
crates/gobbo-codex/src/: lib.rs
crates/gobbo-gateway/: Cargo.toml
crates/gobbo-gateway/src/: lib.rs
crates/gobbo-skills/: Cargo.toml
crates/gobbo-surfaces/: Cargo.toml
crates/gobbo/src/: main.rs
crates/goblin/: Cargo.toml
crates/goblin-codex/: Cargo.toml
crates/goblin-gateway/: Cargo.toml
crates/goblin-skills/: Cargo.toml
crates/goblin-skills/src/: lib.rs
crates/goblin-surfaces/: Cargo.toml
crates/goblin-surfaces/src/: lib.rs
crates/goblin/src/: main.rs
crates/milton/: Cargo.toml
crates/milton-arena/: Cargo.toml
crates/milton-arena/src/: lib.rs
crates/milton-mcts/: Cargo.toml
crates/milton-mcts/src/: lib.rs
crates/milton-net/: Cargo.toml
crates/milton-net/src/: lib.rs
crates/milton-selfplay/: Cargo.toml
crates/milton-selfplay/src/: lib.rs
crates/milton/src/: main.rs
docs/: architecture.md  arena.md  coach.md  lichess.md  loop.md  mcts.md  network.md  operations.md  selfplay.md  training.md
src/gateway/: keepalive.ts  providers.ts  runtime.ts  server.ts  session.ts
src/gateway/protocol/: index.ts
src/infra/bridge/: server.ts
