[workspace]
resolver = "2"
members = [
    "crates/goblin",
    "crates/goblin-codex",
    "crates/goblin-gateway",
    "crates/goblin-skills",
    "crates/goblin-surfaces",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/nick-baumann/Goblin"
authors = ["Nick Baumann"]
version = "0.6.1"
rust-version = "1.78"
