[package]
name = "goblin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "goblin"
path = "src/main.rs"

[dependencies]
goblin-codex = { path = "../goblin-codex" }
goblin-gateway = { path = "../goblin-gateway" }
goblin-skills = { path = "../goblin-skills" }
goblin-surfaces = { path = "../goblin-surfaces" }
